Uploading the full core of the calculator with all the operations

--- a/index.html
+++ b/index.html
@@ -7,5 +7,36 @@
         <link rel="stylesheet" href="style.css" />
         <script type="text/javascript" src="script.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <div class="display-container">
+                <div class="display"></div>
+            </div>
+            <div class="pad">
+                <div class="numbers">
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                    <button class="functions clear">Clear</button>
+                    <button class="number">0</button>
+                    <button class="functions">Delete</button>
+                </div>
+                <div class="operations">
+                    <button class="operator +">+</button>
+                    <button class="operator -">-</button>
+                    <button class="operator *">*</button>
+                    <button class="operator /">/</button>
+                </div>
+                <div class="equals">
+                    <button class="operator">=</button>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
